--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.8",
+    "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "hbs": "^4.0.1",
     "method-override": "^2.3.9",
